--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/reprograma/On11-TodasEmTech-s15-Auth#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
