--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/reprograma/On11-TodasEmTech-s15-Auth.git"
   },
-  "author": "",
+  "author": "Karla Thamiris",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/reprograma/On11-TodasEmTech-s15-Auth/issues"
